[package]
name = "overcast"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-gossip = "2.2.1"
solana-sdk = "2.2.1"
solana-streamer = "2.2.1"
solana-ledger = "2.2.1"
signal-hook = "0.3"
solana-net-utils = "2.2.1"
libc = "0.2.171"
heapless = "0.8.0"
ahash = "0.8.11"
anyhow = "1.0.97"
crossbeam-channel = "0.5.14"

warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
rayon = "1.10.0"
